# django-csvfixtures

./: .gitignore  MANIFEST.in  README.md  build.txt  gitignore  pyproject.toml  setup.cfg
csvfixture_importer/: __init__.py  admin.py  apps.py  forms.py  importer.py  mixins.py  urls.py  utils.py  views.py
csvfixture_importer/templates/admin/: csvfixture_importer_index.html
csvfixture_importer/templates/admin/csvfixture_importer/: panel.html  per_model_button_change_list.html
csvfixture_importer/tests/: tests.py
