[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-csvfixtures"
version = "1.0.0"
description = "Library for Django to import CSVs files as fixtures from the admin panel."
readme = "README.md"
authors = [ { name = "Jason Castillejos", email = "tuemail@example.com" } ]
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Django >= 5.0",
]

[project.urls]
Homepage = "https://github.com/tuusuario/django-csvfixtures"
Repository = "https://github.com/tuusuario/django-csvfixtures"
Issues = "https://github.com/tuusuario/django-csvfixtures/issues"