[metadata]
name = django-csvfixtures
version = 1.0.0
description = Librería Django para importar CSVs como fixtures desde el admin.
long_description = file: README.md
long_description_content_type = text/markdown
author = Tu Nombre
author_email = tuemail@example.com
url = https://github.com/tuusuario/django-csvfixtures
license = MIT
classifiers =
    Framework :: Django
    Framework :: Django :: 5.0
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    Django>=5.0

[options.package_data]
* = *.html